#feat: Adding responsive to login screen

--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -76,6 +76,47 @@
             width: 100%;
         }
     }
+
+    @media only screen and (max-width: 1600px) {
+        .main-container {
+            width: 60% !important;
+        }
+    }
+
+    @media only screen and (max-width: 1400px) {
+        .main-container {
+            width: 70% !important;
+        }
+    }
+    
+    @media only screen and (max-width: 1200px) {
+        .main-container {
+            width: 90% !important;
+        }
+    }
+
+    @media only screen and (max-width: 1000px) {
+        .main-container {
+            width: 90% !important;
+        }
+    }
+
+    @media only screen and (max-width: 700px) {
+        .main-container {
+            height: 780px;
+            width: 90% !important;
+            flex-direction: column-reverse;
+            .login-content {
+                height: 70% !important;
+                width: 100% !important;
+                padding: 10px;
+            }
+            .image-container {
+                height: 30% !important;
+            }
+        }
+    }
+    
 }
 .forgot-password-tooltip {
     .p-tooltip-text {
