--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,4 +1,5 @@
 #main-screen {
+    position: relative;
     max-height: 100%;
     overflow-y: auto;
     background-color: #e2d9c8;
@@ -43,7 +44,7 @@
         width: 100%;
         padding: 0px 40px;
 
-        position: fixed;
+        position: absolute;
         top: 0px;
         
         .title {
@@ -99,14 +100,53 @@
 
     .shop-container {
         background-color: #FFF;
-        min-height: 1200px;
-        height: 1200px;
-        width: 80%;
+        min-height: 1550px;
+        height: 1550px;
+        width: 100%;
         padding: 30px;
-        border-radius: 4px;
+        border-radius: 4px 4px 0px 0px;
     }
 
     .p-carousel-items-container {
         height: 650px;
+    }
+    
+    .p-carousel .p-carousel-indicators .p-carousel-indicator.p-highlight button {
+        background-color: #382f32;
+    }
+    .p-carousel-indicator {
+        button {
+            border-radius: 10px;
+        }
+    }
+
+    .beans-container {
+        width: 100%;
+        background-color: #e7e1d5;
+        display: flex;
+        position: relative;
+        justify-content: center;
+        overflow: hidden;
+        min-height: 500px;
+        .hands-img {
+            transform: rotate(90deg);
+            position: absolute;
+            left: -150px;
+            top: 140px;
+        }
+        .coffee-portion-img {
+            position: absolute;
+            top: 80px;
+            right: 0px;
+        }
+
+        .content {
+            width: 60%;
+            height: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+        }
     }
 }
