#feat: custom scrollbar

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -233,3 +233,24 @@
         height: 300px;
     }
 }
+
+#main-screen::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #fdefd9;
+}
+
+#main-screen::-webkit-scrollbar
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	width: 12px;
+	background-color: #fdefd9;
+}
+
+#main-screen::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px #6e6a6c;
+	background-color: #3b383a;
+}
