--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,6 +4,10 @@
     overflow-y: auto;
     background-color: #e2d9c8;
 
+    .main-content-container {
+        width: 80%;
+    }
+    
     .image-container {
         width: 100%;
         height: 100%;
@@ -12,9 +16,10 @@
         justify-content: center;
         align-items: flex-end;
         flex-direction: column;
-        background-color: #14040059;
         background-size: cover;
         background-position: 30% 70%;
+        background-color: #8a8080;
+        background-blend-mode: multiply;
     }
 
     .custom-buttom {
@@ -147,12 +152,16 @@
         }
 
         .content {
-            width: 60%;
+            margin-left: -90px;
+            width: 50%;
             height: 500px;
             display: flex;
             justify-content: center;
             align-items: flex-start;
             flex-direction: column;
+            .title-text {
+                font-size: 40px;
+            }
         }
     }
 
@@ -205,6 +214,10 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+
+            .email-input-container {
+                width: 70%;
+            }
         }
         
         .hands-img {
@@ -235,6 +248,116 @@
         align-items: center;
         justify-content: space-around;
     }
+
+    @media only screen and (max-width: 1400px) {
+        .beans-container {
+            .hands-img {
+                left: -220px !important;
+            }
+    
+            .coffee-portion-img {
+                right: -80px !important;
+            }
+            
+            .content {
+                margin-left: -90px;
+                width: 55% !important;
+                .title-text {
+                    font-size: 30px;
+                }
+                .small-text {
+                    display: none;
+                }
+            }
+        }
+    }
+    
+    @media only screen and (max-width: 1140px) {
+        .image-container {
+            align-items: center !important;
+            background-position: 40% 60% !important;
+        }
+    
+        .main-content-container {
+            width: 90% !important;
+        }
+    }
+    
+    @media only screen and (max-width: 950px) {
+        .beans-container {
+            .hands-img {
+                left: -143px !important;
+                top: -60px !important;
+                transform: rotate(147deg) !important;
+            }
+    
+            .coffee-portion-img {
+                top: unset !important;
+                bottom: -90px !important;
+                transform: rotate(121deg) !important;
+                right: -155px !important;
+            }
+        }
+    
+        .join-container {
+            .hands-img {
+                bottom: -75px !important;
+                left: -32px !important;
+            }
+            .coffee-portion-img {
+                top: -75px !important;
+                right: -32px !important;
+            }
+    
+            .hide-text {
+                display: none;
+            }
+    
+            .content {
+                .email-input-container {
+                    flex-direction: column;
+                    .email-input {
+                        width: 100% !important;
+                        margin-bottom: 10px;
+                    }
+                }
+            }
+        }
+    }
+    
+    @media only screen and (max-width: 670px) {
+        .join-container {
+            .hide-text-full {
+                display: none;
+            }
+        }
+
+        .join-container {
+            .content {
+                .email-input-container {
+                    margin-top: 10px;
+                    width: 100%;
+                }
+            }
+        }
+    }
+    
+    @media only screen and (max-width: 550px) {
+        .join-container {
+            .main-title {
+                font-size: 30px !important;
+            }
+        }
+    
+        .beans-container {
+            .content {
+                .title-text {
+                    font-size: 23px;
+                }
+            }
+        }
+    }
+    
 }
 
 #main-screen::-webkit-scrollbar-track
