--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -77,25 +77,25 @@
         }
     }
 
-    @media only screen and (max-width: 1600px) {
+    @media only screen and (min-width: 1400px) and (max-width: 1600px) {
         .main-container {
             width: 60% !important;
         }
     }
 
-    @media only screen and (max-width: 1400px) {
+    @media only screen and (min-width: 1200px) and (max-width: 1400px) {
         .main-container {
             width: 70% !important;
         }
     }
     
-    @media only screen and (max-width: 1200px) {
+    @media only screen and (min-width: 1000px) and (max-width: 1200px) {
         .main-container {
             width: 90% !important;
         }
     }
 
-    @media only screen and (max-width: 1000px) {
+    @media only screen and (min-width: 700px) and (max-width: 1000px) {
         .main-container {
             width: 90% !important;
         }
