--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -22,6 +22,10 @@
         background-blend-mode: multiply;
     }
 
+    .icons-container {
+        width: 60%;
+    }
+
     .custom-buttom {
         border: 2px solid #FFF;
         border-radius: 2px;
@@ -166,13 +170,27 @@
     }
 
     .reviews-container {
+        position: relative;
         background-color: #f0e8e1;
-        height: 500px;
+        height: 520px;
         .title {
             display: flex;
             flex-direction: column;
             width: 100%;
             align-items: center;
+        }
+
+        .p-carousel-prev {
+            left: 0px;
+            svg {
+                margin-left: -2px;
+            }
+        }
+        .p-carousel-next {
+            right: 0px;
+            svg {
+                margin-right: -2px;
+            }
         }
     }
 
@@ -181,8 +199,9 @@
     }
 
     .custom-carousel-review {
+        
         .p-carousel-container {
-            height: 250px;
+            height: 270px;
         }
 
         .p-carousel-indicator {
@@ -195,6 +214,10 @@
         .p-carousel-item-start, .p-carousel-item-end {
             transform: scale(0.95);
             transition: transform 1.2s ease;
+        }
+        .p-carousel-item {
+            display: flex;
+            justify-content: center;
         }
     }
 
@@ -284,6 +307,10 @@
     }
     
     @media only screen and (max-width: 950px) {
+        .icons-container {
+            width: 100%;
+        }
+        
         .beans-container {
             .hands-img {
                 left: -143px !important;
@@ -340,20 +367,101 @@
                 }
             }
         }
+
+        .reviews-container {
+            height: 550px;
+        }
+    
+        .custom-carousel-review {
+            .p-carousel-container {
+                height: 305px;
+            }
+        }
     }
     
+    .p-carousel .p-carousel-content .p-carousel-prev, .p-carousel .p-carousel-content .p-carousel-next {
+        z-index: 2;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        color: #d5c5a4;
+        background-color: #382f2f;
+    }
+    .p-carousel-prev {
+        // background-image: linear-gradient(to left, #382f2f , #5e5050);
+        left: 8px;
+        svg {
+            margin-left: -2px;
+        }
+    }
+    .p-carousel-next {
+        // background-image: linear-gradient(to right, #382f2f , #5e5050);
+        right: 8px;
+        svg {
+            margin-right: -2px;
+        }
+    }
+    .p-carousel-prev:hover {
+        background-color: #1f1b1b !important;
+        // background-image: linear-gradient(to right, #2b2525 , #2b2525);
+    }
+    .p-carousel-next:hover {
+        background-color: #1f1b1b !important;
+        // background-image: linear-gradient(to left, #2b2525 , #2b2525);
+    }
+    .shop-container {
+        position: relative;
+
+    }
     @media only screen and (max-width: 550px) {
+        .shop-container {
+            padding-right: 0px;
+            padding-left: 0px;
+            .p-carousel-prev {
+                left: -2px;
+                
+            }
+            .p-carousel-next {
+                right: -2px;
+                
+            }
+        }
+        
+        .icons-container {
+            flex-wrap: wrap;
+            div {
+                width: 50%;
+            }
+            div:nth-child(-n + 2) {
+                margin-bottom: 40px;
+            }
+        }
+        
         .join-container {
             .main-title {
                 font-size: 30px !important;
             }
         }
-    
+        
         .beans-container {
             .content {
                 .title-text {
                     font-size: 23px;
                 }
+            }
+        }
+        
+        
+    }
+
+    @media only screen and (max-width: 450px) {
+        .reviews-container {
+            height: 630px;
+        }
+    
+        .custom-carousel-review {
+            .p-carousel-container {
+                height: 355px;
             }
         }
     }
@@ -362,7 +470,7 @@
 
 #main-screen::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 	background-color: #fdefd9;
 }
