--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -45,6 +45,69 @@
         transition: all 0.2s;
     }
     
+    #navbar-container, .footer-container {
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+          
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+          
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+          
+        li {
+            margin: 0 2rem;
+        }
+          
+        a {
+            cursor: pointer;
+            color: #FFF;
+            font-size: 25px;
+            display: block;
+            position: relative;
+            padding: 0.2em 0;
+        }
+          
+        a::after {
+            content: '';
+            position: absolute;
+            bottom: 8px;
+            left: -1px;
+            width: 100%;
+            height: 0.1em;
+            background-color: #FFF;
+            opacity: 0;
+            transition: opacity 300ms, transform 300ms;
+        }
+          
+        a:hover::after,
+        a:focus::after {
+            opacity: 1;
+        }
+          
+        li a {
+            overflow: hidden;
+        }
+          
+        li a::after {
+            opacity: 1;
+            transform: translate3d(-101%, 0, 0);
+        }
+          
+        li a:hover::after,
+        li a:focus::after{
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
     #navbar-container {
         z-index: 1000;
         display: flex;
@@ -52,40 +115,25 @@
         justify-content: space-around;
         width: 100%;
         padding: 0px 40px;
-
-        position: absolute;
+        position: fixed;
         top: 0px;
+        left: 0;
+        right: 0;
+        background-color: transparent;
+        transition: background-color 0.3s ease-in-out;
         
         .title {
             font-size: 32px;
             color: #FFF;
         }
-        
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            color: #FFF;
-            li {
-                margin-bottom: -8px;
-                float: left;
-            }
-            
-            li a {
-                font-size: 26px;
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 16px;
-                text-decoration: none;
-            }
-            
-            li a:hover {
-                // background-color: #111111;
-            }
-        }
+    }    
+
+    #navbar-container.scrolled {
+        background-color: #221c1e; /* ou qualquer cor que você prefira */
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0px 5px 9px #0e0b0c88;
     }
+    
     .order-now-button {
         background-color: #FFF;
         border-color: #FFF;
@@ -108,7 +156,7 @@
         letter-spacing: 1px;
     }
 
-    .shop-container {
+    #shop-container {
         background-color: #f0e8e1;
         min-height: 1550px;
         height: 1550px;
@@ -135,7 +183,7 @@
     }
     
 
-    .beans-container {
+    #beans-container {
         width: 100%;
         background-color: #d5c5a4;
         display: flex;
@@ -169,7 +217,7 @@
         }
     }
 
-    .reviews-container {
+    #reviews-container {
         position: relative;
         background-color: #f0e8e1;
         height: 520px;
@@ -221,7 +269,7 @@
         }
     }
 
-    .join-container {
+    #join-container {
         width: 100%;
         background-color: #d5c5a4;
         display: flex;
@@ -273,7 +321,7 @@
     }
 
     @media only screen and (max-width: 1400px) {
-        .beans-container {
+        #beans-container {
             .hands-img {
                 left: -220px !important;
             }
@@ -311,7 +359,7 @@
             width: 100%;
         }
         
-        .beans-container {
+        #beans-container {
             .hands-img {
                 left: -143px !important;
                 top: -60px !important;
@@ -326,7 +374,7 @@
             }
         }
     
-        .join-container {
+        #join-container {
             .hands-img {
                 bottom: -75px !important;
                 left: -32px !important;
@@ -353,13 +401,13 @@
     }
     
     @media only screen and (max-width: 670px) {
-        .join-container {
+        #join-container {
             .hide-text-full {
                 display: none;
             }
         }
 
-        .join-container {
+        #join-container {
             .content {
                 .email-input-container {
                     margin-top: 10px;
@@ -368,7 +416,7 @@
             }
         }
 
-        .reviews-container {
+        #reviews-container {
             height: 550px;
         }
     
@@ -409,12 +457,12 @@
         background-color: #1f1b1b !important;
         // background-image: linear-gradient(to left, #2b2525 , #2b2525);
     }
-    .shop-container {
+    #shop-container {
         position: relative;
 
     }
     @media only screen and (max-width: 550px) {
-        .shop-container {
+        #shop-container {
             padding-right: 0px;
             padding-left: 0px;
             .p-carousel-prev {
@@ -437,13 +485,13 @@
             }
         }
         
-        .join-container {
+        #join-container {
             .main-title {
                 font-size: 30px !important;
             }
         }
         
-        .beans-container {
+        #beans-container {
             .content {
                 .title-text {
                     font-size: 23px;
@@ -455,7 +503,7 @@
     }
 
     @media only screen and (max-width: 450px) {
-        .reviews-container {
+        #reviews-container {
             height: 630px;
         }
     
