--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -26,6 +26,70 @@
         width: 60%;
     }
 
+    .menu-lateral {
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.5) !important;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        opacity: 0; /* Inicialmente invisível */
+        visibility: hidden; /* Esconde o menu lateral */
+        transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out; /* Transição suave para aparecer/desaparecer */
+        overflow: hidden;
+    
+        .container {
+            position: relative;
+            left: -350px; /* Posiciona o menu fora da tela à esquerda */
+            width: 350px;
+            height: 100%;
+            background-color: #d5c5a4;
+            transition: left 0.5s ease-in-out; /* Transição suave para o movimento do menu */
+    
+            .side-menu-list {
+                margin: 0px;
+                list-style: none;
+                padding: 40px 10px;
+                font-size: 25px;
+                flex-direction: column !important;
+                li {
+                    display: flex;
+                    margin-bottom: 10px;
+                }
+                li a {
+                    display: flex;
+                    color: #2b2527 !important;
+                }
+                a::after {
+                    background-color: #2b2527 !important;
+                }
+            }
+    
+            .close-button {
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                padding: 32px 30px;
+                cursor: pointer;
+            }
+        }
+    
+        &.expanded-menu {
+            opacity: 1; /* Faz o menu lateral visível */
+            visibility: visible; /* Garante que o menu lateral seja interativo */
+            .container {
+                left: 0px; /* Move o menu para dentro da tela */
+            }
+        }
+    
+        &.collapsed-menu {
+            opacity: 0; /* Faz o menu lateral invisível */
+            visibility: hidden; /* Esconde o menu lateral após a transição */
+            .container {
+                left: -350px; /* Move o menu de volta para fora da tela */
+            }
+        }
+    }
+
     .custom-buttom {
         border: 2px solid #FFF;
         border-radius: 2px;
@@ -45,7 +109,7 @@
         transition: all 0.2s;
     }
     
-    #navbar-container, .footer-container {
+    #navbar-container, .footer-container, .menu-lateral {
         ul {
             list-style: none;
             margin: 0;
@@ -73,7 +137,7 @@
             font-size: 25px;
             display: block;
             position: relative;
-            padding: 0.2em 0;
+            padding: 15px 0px 10px 0px;
         }
           
         a::after {
@@ -125,6 +189,10 @@
         .title {
             font-size: 32px;
             color: #FFF;
+        }
+
+        .menu-button {
+            display: none;
         }
     }    
 
@@ -357,6 +425,18 @@
     @media only screen and (max-width: 950px) {
         .icons-container {
             width: 100%;
+        }
+
+        #navbar-container {
+            justify-content: space-between;
+            padding: 25px 28px 25px 20px;
+            .top-menu-list {
+                display: none !important;
+            }
+
+            .menu-button {
+                display: block;
+            }
         }
         
         #beans-container {
