#feat: changing input focus color

--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -49,7 +49,7 @@
         input:enabled:focus {
             outline: 0 none;
             outline-offset: 0;
-            box-shadow: 0 0 0 0.2rem #c8b9ff;
+            box-shadow: 0 0 0 0.2rem #ffcdb9;
             border-color: #4b3e3e;
         }
 
