--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,7 +1,7 @@
 #main-screen {
     position: relative;
-    max-height: 100%;
-    overflow-y: auto;
+    // max-height: 100%;
+    // overflow-y: auto;
     background-color: #e2d9c8;
 
     .main-content-container {
