--- a/src/components/Home2/index.scss
+++ b/src/components/Home2/index.scss
@@ -256,7 +256,6 @@ body {
         height: 600px;
         width: 100%;
         padding: 30px;
-        border-radius: 4px 4px 0px 0px;
     }
 
     .custom-carousel {
@@ -278,6 +277,7 @@ body {
     
 
     #beans-container {
+        border-radius: 6px 6px 0px 0px;
         width: 100%;
         background-color: #20a7f9;
         color: #FFF;
@@ -313,8 +313,9 @@ body {
     }
 
     #reviews-container {
+        color: #13406c;
         background-color: #FFF;
-        height: 520px;
+        height: 480px;
         .title {
             display: flex;
             flex-direction: column;
@@ -373,12 +374,24 @@ body {
 
     #join-container {
         width: 100%;
-        background-color: #d5c5a4;
+        background-color: #20a7f9;
+        color: #FFF;
         display: flex;
         position: relative;
         justify-content: center;
         overflow: hidden;
         min-height: 500px;
+
+        .propostas-list {
+            li {
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 12px;
+                }
+                margin-bottom: 10px;
+            }
+        }
 
         .content {
             width: 60%;
@@ -394,7 +407,6 @@ body {
         }
         
         .hands-img {
-            transform: rotate(90deg);
             position: absolute;
             left: 0px;
             bottom: 0px;
@@ -403,7 +415,6 @@ body {
             position: absolute;
             top: 0px;
             right: 0px;
-            transform: rotate(270deg);
         }
         
     }
