#feat: fix in responsive

--- a/src/components/Home2/index.scss
+++ b/src/components/Home2/index.scss
@@ -709,6 +709,14 @@ body {
             }
         }
     }
+
+    @media only screen and (max-width: 360px) {
+        #beans-container {
+            .content {
+                padding: 0px 55px;
+            }
+        }
+    }
     
 }
 
