#feat: removing background blue

--- a/src/components/Home2/index.scss
+++ b/src/components/Home2/index.scss
@@ -6,7 +6,7 @@ body {
     position: relative;
     // max-height: 100%;
     // overflow-y: auto;
-    background-color: #0097fe;
+    background-color: #FFF;
 
     .main-content-container {
         width: 80%;
